# SmartType

./: .gitignore  INSTALL.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  USAGE.md
.github/workflows/: rust.yml
SmartType/: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  fix-service.sh
SmartType/go-daemon/: service.go
SmartType/python-gui/: main.py  requirements.txt
SmartType/rust-core/: Cargo.toml
SmartType/rust-core/src/: dictionary.rs  engine.rs  hook.rs  lib.rs  smart_punctuation.rs
SmartType/rust-course/: .gitignore  README.md
SmartType/rust-course/capstone/: README.md
SmartType/rust-course/capstone/port_scanner/src/: lib.rs  main.rs
SmartType/rust-course/module0/: README.md
SmartType/rust-course/module0/hello_rust/src/: main.rs
SmartType/rust-course/module1/: README.md
SmartType/rust-course/module1/toolbox/src/: fib.rs  main.rs  temp.rs  wc.rs
SmartType/rust-course/module10/: README.md
SmartType/rust-course/module10/async_crawler/: Cargo.toml
SmartType/rust-course/module10/async_crawler/src/: lib.rs  main.rs
SmartType/rust-course/module11/: README.md
SmartType/rust-course/module11/optimizer/src/: lib.rs  main.rs
SmartType/rust-course/module12/: README.md
SmartType/rust-course/module12/minimal_ffi/: Cargo.toml
SmartType/rust-course/module12/minimal_ffi/src/: lib.rs  main.rs
SmartType/rust-course/module2/: README.md
SmartType/rust-course/module2/rsgrep/src/: lib.rs  main.rs
SmartType/rust-course/module2/rsgrep/tests/: integration.rs
SmartType/rust-course/module3/: README.md
SmartType/rust-course/module3/password_checker/src/: lib.rs  main.rs
SmartType/rust-course/module4/: README.md
SmartType/rust-course/module4/config_loader/src/: lib.rs  main.rs
SmartType/rust-course/module5/: README.md
SmartType/rust-course/module5/stats_tool/: Cargo.toml
SmartType/rust-course/module5/stats_tool/src/: lib.rs  main.rs
SmartType/rust-course/module6/: README.md
SmartType/rust-course/module6/workspace_tool/: Cargo.toml
SmartType/rust-course/module6/workspace_tool/cli/: Cargo.toml
SmartType/rust-course/module6/workspace_tool/cli/src/: main.rs
SmartType/rust-course/module6/workspace_tool/corelib/: Cargo.toml
SmartType/rust-course/module6/workspace_tool/corelib/src/: lib.rs
SmartType/rust-course/module7/: README.md
SmartType/rust-course/module8/: README.md
SmartType/rust-course/module8/mem_db/: Cargo.toml
SmartType/rust-course/module8/mem_db/src/: lib.rs  main.rs
SmartType/rust-course/module9/: README.md
SmartType/rust-course/module9/parallel_scanner/: Cargo.toml
SmartType/rust-course/module9/parallel_scanner/src/: lib.rs  main.rs
SmartType/scripts/: install-deps.sh
go-daemon/: go.mod  go.sum  icon.go  main.go  service.go
ibus/: smarttype.xml
rust-core/: Cargo.toml
rust-core/src/: autocomplete.rs  config.rs  engine.rs  hook.rs  lib.rs  smart_punctuation.rs
scripts/: build-all.sh  install-deps.sh  install.sh
