[package]
name = "smarttype-core"
version = "1.0.0"
edition = "2021"
authors = ["SmartType Contributors"]
description = "High-performance autocorrect + autocomplete IBus engine for Linux"
license = "MIT"

[lib]
name = "smarttype_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "smarttype-engine"
path = "src/bin/engine.rs"

[dependencies]
# Serialisation / config
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
directories = "5.0"

# String processing
regex = "1.10"
phf   = { version = "0.11", features = ["macros"] }

# IBus engine via D-Bus
zbus     = { version = "4" }
zvariant = { version = "4" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
log        = "0.4"
env_logger = "0.11"

# Error handling
anyhow    = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
