[package]
name = "smarttype-core"
version = "1.0.0"
edition = "2021"
authors = ["SmartType Contributors"]
description = "High-performance autocorrect engine for Linux"
license = "MIT"

[lib]
name = "smarttype_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "smarttype-hook"
path = "src/bin/hook.rs"

[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# String processing
regex = "1.10"
unicode-segmentation = "1.11"
phf = { version = "0.11", features = ["macros"] }

# Input handling
evdev = "0.12"
uinput = "0.1"
nix = { version = "0.27", features = ["user", "process"] }
libc = "0.2"

# Async and concurrency
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
crossbeam = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
directories = "5.0"

# IPC
interprocess = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
